fix navbar on smaller devices

--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -18,7 +18,11 @@
 .menu-wrapper {
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 0.5rem;
+
+  @media (min-width: 1200px) {
+    gap: 2rem;
+  }
 }
 
 .menu-button {
